src/test/deca/context/valid/Class10.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022


class A{
    int a;
    int b;
}

{
    A FIRST=new A();
    FIRST.a=100;
    FIRST.b=10;
}