src/test/deca/context/invalid/class5.deca
class A{
    int a;
    int b;

}

{
    A FIRST=new A();
    a=10;
    b=10;

}